# CanfarDesktopUbuntu

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md
.github/workflows/: ci.yml  release.yml
assets/icons/hicolor/: index.theme
data/: net.canfar.Verbinal.desktop
scripts/: install-icons.sh
src/: config.rs  main.rs  state.rs  style.css
src/helpers/: image_parser.rs  mod.rs
src/models/: auth_result.rs  container_image.rs  mod.rs  platform_load.rs  recent_launch.rs  session.rs  session_context.rs  session_launch_params.rs  storage_quota.rs  user_info.rs
src/services/: auth_service.rs  image_service.rs  mod.rs  platform_service.rs  recent_launch_service.rs  session_service.rs  settings_service.rs  storage_service.rs  token_storage.rs
src/ui/: card_header.rs  dashboard.rs  delete_dialog.rs  launch_dialog.rs  launch_form.rs  login_dialog.rs  main_window.rs  metric_bar.rs  mod.rs  platform_load.rs  recent_launches.rs  resource_selector.rs  session_card.rs  session_events_dialog.rs  session_icon.rs  session_list.rs  storage_quota.rs
