[package]
name = "canfar-ubuntu"
version = "1.0.0"
edition = "2021"
description = "Verbinal - a CANFAR Science Portal companion for Linux"
license = "AGPL-3.0"
authors = ["Serhii Zautkin"]

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
keyring = { version = "3", features = ["linux-native"] }
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
once_cell = "1"
url = "2"
